modify service.sh